--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
 
 
     <div class="leading-business">
+        <div class="riaad-verified">
+            <p>Riaad is Verified and<br>Trusted Moving Company.</p>
+            <a href="#" id="get-started">Get Started</a>
+        </div>
         <img src="images/empty_room.jpg" id="furniture">
         <div class="text">
             <div class="choseriaad">
@@ -122,11 +126,21 @@
                     ultrices lorem ipsum is simply free text purusrfed aliquet.</p>
             </div>
             <div class="business-text">
-                <p>Helping over 250,000 movers in the USA></p>
-                <p>Save 70% off the cost of your moving</p>
-                <p>Book survey at a time that suits you</p>
+                <div class="usa-movers">
+                    <p><i class="fa-solid fa-circle-check" id="helping"></i>Helping over 250,000 movers in the USA></p>
+                </div>
 
-                <p>Don't hesitate, contact us for help and services.<a href="#">Book Online</a></p>
+                <div class="save">
+                    <p><i class="fa-solid fa-circle-check" id="save"></i>Save 70% off the cost of your moving</p>
+                </div>
+
+                <div class="booksurvey">
+                    <p><i class="fa-solid fa-circle-check" id="surveytext"></i>Book survey at a time that suits you</p>
+                </div>
+                <div class="contactservices">
+                    <p><i class="fa-solid fa-circle-check" id="contacttext"></i>Don't hesitate, contact us for help and
+                        services.<a href="#">Book Online</a></p>
+                </div>
             </div>
         </div>
     </div>
@@ -138,31 +152,30 @@
     <img src="images/young_couple.jpg" id="coupleimg">
     <div class="form-details">
         <div class="requestquote">
-            <a href="#" id="bookus">BOOK US NOW</a>
-            <p>Request a<br>Free Quote<br>Today</p>
-        
-        <form>
-            <div class="form">
-            <div class="movingtype">
-                <label id="moving-type">Moving Type</label>
-                <input placeholder="local" type="text" /><br>
-                <label>Date</label>
-                <input type="date"><br>
+            <div class="booknow">
+                <a href="#" id="bookus">BOOK US NOW</a>
+                <p id="freequote">Request a<br>Free Quote<br>Today</p>
             </div>
-            <div class="place">
-                <label id="from">From</label>
-                <input placeholder="city,state" type="text"><br>
-                <label id="home-size">Home Size</label>
-                <input placeholder="0" type="number"><br>
-            </div>
-            <div class="destination">
-                <label id="to">To</label>
-                <input placeholder="city, state" type="text"><br>
-                <button>SEND REQUEST</button>
-            </div>
-        </div> 
-        </form>
-    </div>
+            <form>
+                <div class="form">
+                    <div class="movingtype">
+                        <label id="moving-type">Moving Type</label><br>
+                        <input placeholder="local" type="text" /><br>
+                        <label id="from">From</label><br>
+                        <input placeholder="city,state" type="text"><br>
+                        <label id="to">To</label><br>
+                        <input placeholder="city, state" type="text"><br>
+                    </div>
+                    <div class="destination">
+                        <label>Date</label><br>
+                        <input type="date"><br>
+                        <label id="home-size">Home Size</label><br>
+                        <input placeholder="0" type="number"><br><br>
+                        <button>SEND REQUEST</button><br>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
     <div class="What">
         <a href="#" id="testimonials">OUR TESTIMONIALS</a>
@@ -170,7 +183,7 @@
     </div>
     <div class="impression">
         <div class="text-left">
-            <i class="fa-solid fa-quote-left"></i>
+            <i class="fa-solid fa-quote-left" id="quote"></i>
             <p>I was impressed by the moling services,<br>
                 lorem ipsum is simply free text used by <br>
                 copytyping refreshing. Neque porro edt qui<br>
@@ -182,7 +195,7 @@
         </div>
 
         <div class="text-mid">
-            <i class="fa-solid fa-quote-left"></i>
+            <i class="fa-solid fa-quote-left" id="quote"></i>
             <p>I was impressed by the moling services,<br>
                 lorem ipsum is simply free text used by <br>
                 copytyping refreshing. Neque porro edt qui<br>
@@ -194,7 +207,7 @@
         </div>
 
         <div class="text-right">
-            <i class="fa-solid fa-quote-left"></i>
+            <i class="fa-solid fa-quote-left" id="quote"></i>
             <p>I was impressed by the moling services,<br>
                 lorem ipsum is simply free text used by <br>
                 copytyping refreshing. Neque porro edt qui<br>
@@ -205,13 +218,65 @@
 
         </div>
     </div>
+
     <a href="#" id="newsletter">NEWSLETTER SIGNUP</a>
     <h6>Join for new updates</h6>
     <div class="emailaddress">
-    <p id="email">email address</p>
-    <button id="subscribe">Subscribe Now</button>
+        <p id="email">email address</p>
+        <button id="subscribe">Subscribe Now</button>
+    </div>
+    <div class="blog">
+        <a href="#" id="ourblog">OUR BLOG</a>
+        <P id="news">NEWS & ARTICLES</P>
+    </div>
+    <div class="vacationimg">
+        <img src="images/front-view-delivery-men-job-concept.jpg" id="deliveryimg">
+        <img src="images/young-adult-moving-from-his-parents-house.jpg" id="movingoutimg">
+        <img src="young-couple-moving-new-home-together-african-american-couple-with-cardboard-boxes.jpg" id="boxesimg">
+    </div>
+    <div class="aid">
+        <p id="people">Helping Over 250,000 movers in the USA</p>
+        <button type="submit" id="press">DISCOVER MORE</button>
     </div>
 
+    <footer>
+        <div class="footerlog">
+            <div class="phonenumber">
+                <ul>
+                    <li>Phone</li>
+                    <li>+8801714457298</li><br>
+                    <li>Address</li>
+                    <li>Sylhet 3100,Bangladesh</li>
+                </ul>
+            </div>
+            <div class="explore">
+                <ul>
+                    <li>Explore</li><br>
+                    <li>About</li><br>
+                    <li>Our Team</li><br>
+                    <li>Locations</li><br>
+                    <li>Gallery</li><br>
+                    <li>News $Blog</li><br>
+                </ul>
+            </div>
+            <div class="terms">
+                <ul>
+                    <li>Legal</li><br>
+                    <li>Press Room</li><br>
+                    <li>Contact</li><br>
+                    <li>Terms of Use</li><br>
+                    <li>Privacy Policy</li><br>
+                </ul>
+            </div>
+            <div class="icons">
+                <i class="fa-brands fa-twitter" id="twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
